# chess-engine

./: .gitignore  CMakeLists.txt  README.md
src/: board.cpp  board.h  eval.cpp  eval.h  fen.cpp  fen.h  main.cpp  make_move.cpp  make_move.h  move.cpp  move.h  movegen.cpp  movegen.h  search.cpp  search.h  types.h  uci.cpp  uci.h
tests/: test_eval.cpp  test_fen.cpp  test_make_unmake.cpp  test_movegen.cpp  test_performance.cpp  test_search.cpp
